--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,56 @@
-arabic-reshaper==2.1.3
+arabic-reshaper==2.1.4
+asgiref==3.6.0
+asn1crypto==1.5.1
 Brotli==1.0.9
-certifi==2019.9.11
-cffi==1.15.0
-chardet==3.0.4
-cssselect2==0.4.1
-cycler==0.11.0
-defusedxml==0.6.0
-Django==2.2.10
-django-allauth==0.40.0
-django-countries==5.5
-django-crispy-forms==1.7.2
-django-environ==0.4.5
-django-matplotlib==0.1
-django-xhtml2pdf==0.0.4
-fonttools==4.27.1
-fpdf==1.7.2
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+cryptography==38.0.4
+cssselect2==0.7.0
+defusedxml==0.7.1
+Django==4.1.4
+django-allauth==0.51.0
+django-countries==7.5
+django-crispy-forms==1.14.0
+django-jazzmin==2.6.0
+fonttools==4.38.0
 future==0.18.2
 html5lib==1.1
-idna==2.8
-kaleido==0.2.1
-kiwisolver==1.3.1
-matplotlib==3.3.4
-numpy==1.19.5
-oauthlib==3.1.0
-pandas==1.1.5
-Pillow==6.2.0
-plot==0.6.5
-plotly==5.7.0
+idna==3.4
+lxml==4.9.2
+oauthlib==3.2.2
+oscrypto==1.3.0
+Pillow==9.3.0
 pycparser==2.21
-pydyf==0.1.2
-pyparsing==3.0.7
-PyPDF2==1.27.1
-pyphen==0.11.0
+pydyf==0.5.0
+pyHanko==0.16.0
+pyhanko-certvalidator==0.19.8
+PyJWT==2.6.0
+PyPDF3==1.0.6
+pyphen==0.13.2
 python-bidi==0.4.2
-python-dateutil==2.8.2
 python-decouple==3.6
-python3-openid==3.1.0
-pytz==2019.3
+python3-openid==3.2.0
+pytz==2022.7
+pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
-reportlab==3.6.6
-requests==2.22.0
-requests-oauthlib==1.2.0
-scipy==1.5.4
-six==1.12.0
-sqlparse==0.3.0
-stripe==2.37.2
-tenacity==8.0.1
-tinycss2==1.1.1
-typing==3.7.4.3
-urllib3==1.25.6
-weasyprint==54.3
+qrcode==7.3.1
+reportlab==3.6.12
+requests==2.28.1
+requests-oauthlib==1.3.1
+six==1.16.0
+sqlparse==0.4.3
+stripe==5.0.0
+svglib==1.4.1
+tinycss2==1.2.1
+tqdm==4.64.1
+typing_extensions==4.4.0
+tzdata==2022.7
+tzlocal==4.2
+uritools==4.0.0
+urllib3==1.26.13
+weasyprint==57.2
 webencodings==0.5.1
-xhtml2pdf==0.2.5
-zopfli==0.1.9
+xhtml2pdf==0.2.8
+zopfli==0.2.2
